--- a/sbb/pom.xml
+++ b/sbb/pom.xml
@@ -96,6 +96,14 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.commonmark</groupId>
+			<artifactId>commonmark</artifactId>
+			<version>0.24.0</version>
+		</dependency>
+		<!-- springboot가 내부적으로 관리하는 라이브러리의 경우 버전 명시하지 않으면
+		가장 궁합이 잘 맞는 버전을 자동선택함
+		markdown의 경우 내부적으로 관리하는 라이브러리가 아니기 때문에 버전을 명시함 -->
 	</dependencies>
 
 	<build>
