--- a/sbb/src/main/resources/application-prod.properties
+++ b/sbb/src/main/resources/application-prod.properties
@@ -2,16 +2,21 @@ spring.application.name=sbb
 
 # DATABASE
 # test용으로 h2 사용
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:h2:~/local
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.h2.console.settings.web-allow-others=true
+# spring.datasource.url=jdbc:h2:~/local
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/sbb
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=dbmasteruser
 spring.datasource.password=1234
 
 # JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
